--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <!-- 파비콘을 사용해서 타이틀에 아이콘을 추가하기 -->
+  <link rel="shortcut icon" type="image/x-icon" href="./img/logo2.png">
+  <title>엄브로 온라인스토어</title>
   <!-- 7번 줄에 붙여넣기 해야한다! -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -13,68 +15,85 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light nav_var">
-    <div class="container-fluid nav_logo">
-      <a class="navbar-brand active nav_logo" href="#"><img src="./img/logo.png" height="67px">UMBRO</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active nav_text" aria-current="page" href="#">SHOP</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active nav_text" href="#">NEW</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active nav_text" href="#">BEST</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active nav_text" href="#">FOOTBALL</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active nav_text" href="#">BRAND</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light nav_var">
+      <div class="container-fluid nav_logo">
+        <a class="navbar-brand active nav_logo ps-2" href="#"><img src="./img/logo1.png" height="52px" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active nav_text" aria-current="page" href="#">SHOP</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active nav_text" href="#">NEW</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active nav_text" href="#">BEST</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active nav_text" href="#">FOOTBALL</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active nav_text" href="#">BRAND</a>
+            </li>
+          </ul>
+          <form class="d-flex ms-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+    <ul>
+      <li class="nav-item nav-login">
+        <a href="#" class="nav-link nav_text">로그인</a>
+        <span class="nav-link nav_text">/</span>
+        <a href="#" class="nav-link nav_text">회원가입</a>
+      </li>
+    </ul>
+  </header>
 
 
-  <div id="carouselExampleIndicators" class="carousel slide container-fluid" data-bs-ride="true">
+  <div id="carouselExampleInterval" class="carousel slide container-fluid" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-bs-interval="4000">
         <a href="#">
           <img
             src="https://images.descentekorea.co.kr/contents/disp/Builder/Unit/20230503/230425_UMB_Healthy_PC_main_banner_20230503101451.jpg"
             class="d-block vw-100" alt="..."></a>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="4000">
         <a href="#">
           <img
             src="https://images.descentekorea.co.kr/contents/disp/Builder/Unit/20230406/PC_UMB_main_banner_134100_20230406105803.jpg"
             class="d-block vw-100" alt="..."></a>
       </div>
+      <div class="carousel-item" data-bs-interval="4000">
+        <a href="#">
+          <img
+            src="https://images.descentekorea.co.kr/contents/disp/Builder/Unit/20230509/230503_UMB_WaveCiti_PC_1920x910_20230509014419.jpg"
+            class="d-block vw-100" alt="..."></a>
+      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
